# src/routes/documentRoutes.js
@@ -15,22 +15,15 @@ router.post(
   validateFile,
   documentController.addDocument,
 );
+
 router.post("/list", verifyToken, documentController.listDocuments);
 router.post("/list-paginated", verifyToken, documentController.listDocumentsPaginated);
 router.get("/list", verifyToken, documentController.getDocumentList);
 router.get("/:id", verifyToken, documentController.getDocumentById);
 router.delete("/:id", verifyToken, documentController.deleteDocument);
 
-//document upload in s3 bucket
-// router.post(
-//   "/upload",
-//   upload.single("file"),
-//   validateFile,
-//   FileController.uploadFile,
-// );
-
 //download document from s3 bucket using file key
-// router.get("/download-url", FileController.getDownloadFile);
+router.get("/download-url", documentController.getDownloadFile);
 
 //delete document from s3 bucket using file key
 // router.delete("/delete", FileController.deleteFile);
